# project

./: package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
src/: App.tsx
src/components/: AuthModal.tsx  CongestionBadge.tsx
src/hooks/: useLocalStorage.ts  useSupabaseData.ts
src/lib/: supabase.ts
src/services/: congestionService.ts  storeService.ts  tagService.ts
src/types/: database.ts
supabase/migrations/: 20250716022345_nameless_mouse.sql
