[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic==1.13.0",
    "black==23.11.0",
    "celery>=5.5.3",
    "email-validator>=2.2.0",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "folium>=0.20.0",
    "geoalchemy2>=0.17.1",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "httpx==0.25.2",
    "loguru==0.7.2",
    "mypy==1.7.1",
    "numpy==1.26.2",
    "pandas==2.1.4",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-socketio>=5.13.0",
    "redis>=6.2.0",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
    "websockets>=15.0.1",
]
